--- a/archer.vcxproj
+++ b/archer.vcxproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <None Include="LICENSE" />
     <None Include="README.md" />
+    <None Include="res\main.arc" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\archer\Archer.h" />
